@@ -1,3 +1,7 @@
+2005-05-20 Kunihiro Ishiguro  <kunihiro@ipinfusion.com>
+
+	* bgp_debug.c: Cosmetical fixes and log neighbor changes.
+
 2004-05-20  Akihiro Mizutani <mizutani@net-chef.net>
 
 	* bgp_ecommunity.c: Transit ecommunity support.
